# rules-go-ptypes-repro

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  go.bzl  go.mod  go.sum
impl/: BUILD.bazel  with_lro.go
patches/: io_bazel_rules_go_proto_mapping.patch
protos/: BUILD.bazel  with_lro.proto
