load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protos_proto",
    srcs = ["with_lro.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/longrunning:longrunning_proto",
    ],
)

go_proto_library(
    name = "protos_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/sessfeld/rules-go-ptypes-repro/protos",
    proto = ":protos_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto//googleapis/longrunning"],
)

go_library(
    name = "protos",
    embed = [":protos_go_proto"],
    importpath = "github.com/sessfeld/rules-go-ptypes-repro/protos",
    visibility = ["//visibility:public"],
)
